tests/fixtures/invalid/set_div_int.py
# Cannot divide Set[int] and Int
x: float = {1, 2, 3} / 1
